# HawkStream

./: .gitignore  README.md  app.py  camera.py  config.py  frame_processor.py  object_detector.py  pyproject.toml  requirements.txt  setup.py  stream.py  stream_insight.py
hawk_stream/: app.py  data_visualization.py  database.py  detected_object.py  frame_processor.py  logger.py  object_detection.db  object_detector.py  stream.py  stream_insight.py
hawk_stream/static/js/: charts.js
hawk_stream/templates/: index.html
tests/: database_test.py  db_test.db
